<resources>
    <string name="app_name">Namaz: learning for kids</string>
    <string name="banner_id">ca-app-pub-2087576898425893/5327621791</string>
    <string name="app_id">ca-app-pub-2087576898425893~5219810582</string>
    <string name="banner_ad1">ca-app-pub-2087576898425893/4783729643</string>
    <string name="banner_ad2">ca-app-pub-2087576898425893/4527103992</string>
    <string name="banner_ad3">ca-app-pub-2087576898425893/1709368964</string>
    <string name="banner_ad4">ca-app-pub-2087576898425893/9204715605</string>
    <string name="banner_ad5">ca-app-pub-2087576898425893/4783729643</string>

</resources>
